--- a/TrabalhoBanco/WebContent/CadastroCliente.xhtml
+++ b/TrabalhoBanco/WebContent/CadastroCliente.xhtml
@@ -10,10 +10,7 @@
 	
 	<h:body>
 		<h:form acceptcharset="ISO-8859-1">
-			Nome: <h:inputText 
-				pt:placeholder="Digite o nome"
-				>
-			</h:inputText>
+			Nome: <h:inputText pt:placeholder="Digite o nome"></h:inputText>
 			<br>
 			</br>
 			<br>
