--- a/TrabalhoBanco/WebContent/CadastroCliente.xhtml
+++ b/TrabalhoBanco/WebContent/CadastroCliente.xhtml
@@ -15,18 +15,12 @@
 			</br>
 			<br>
 			</br>
-			Email: <h:inputText 
-				pt:placeholder="Digite o e-mail"
-				>
-			</h:inputText>
+			Email: <h:inputText pt:placeholder="Digite o e-mail"></h:inputText>
 			<br>
 			</br>
 			<br>
 			</br>
-			Senha:<h:inputText 
-				pt:placeholder="Digite a senha"
-				>
-			</h:inputText>
+			Senha:<h:inputText pt:placeholder="Digite a senha"></h:inputText>
 			<br>
 			</br>
 			<br>
