--- a/TrabalhoBanco/WebContent/CadastroCliente.xhtml
+++ b/TrabalhoBanco/WebContent/CadastroCliente.xhtml
@@ -25,10 +25,7 @@
 			</br>
 			<br>
 			</br>
-			Telefone:<h:inputText 
-				pt:placeholder="Digite o telefone"
-				>
-			</h:inputText>
+			Telefone:<h:inputText pt:placeholder="Digite o telefone"></h:inputText>
 			<br>
 			</br>
 			<br>
