--- a/TrabalhoBanco/WebContent/CadastroCliente.xhtml
+++ b/TrabalhoBanco/WebContent/CadastroCliente.xhtml
@@ -2,7 +2,8 @@
 <!DOCTYPE html>
 <html xmlns="http://www.w3.org/1999/xhtml"
 	  xmlns:h="http://java.sun.com/jsf/html"
-	  xmlns:pt="http://xmlns.jcp.org/jsf/passthrough">
+	  xmlns:pt="http://xmlns.jcp.org/jsf/passthrough"
+	  xmlns:f = "http://java.sun.com/jsf/core">
 	<h:head>
 		<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
 <title>Cadastro Cliente</title>
@@ -11,83 +12,48 @@
 	<h:body>
 		<h:form acceptcharset="ISO-8859-1">
 			Nome: <h:inputText pt:placeholder="Digite o nome"></h:inputText>
-			<br>
-			</br>
-			<br>
-			</br>
+			<br/>
+			<br/>
 			Email: <h:inputText pt:placeholder="Digite o e-mail"></h:inputText>
-			<br>
-			</br>
-			<br>
-			</br>
+			<br/>
+			<br/>
 			Senha:<h:inputText pt:placeholder="Digite a senha"></h:inputText>
-			<br>
-			</br>
-			<br>
-			</br>
+			<br/>
+			<br/>
 			Telefone:<h:inputText pt:placeholder="Digite o telefone"></h:inputText>
-			<br>
-			</br>
-			<br>
-			</br>
-			Data de Nascimento:<h:inputText 
-				pt:placeholder="Digite a data"
-				>
-			</h:inputText>
-			<br>
-			</br>
-			<br>
-			</br>
+			<br/>
+			<br/>
+			Data de Nascimento:<h:inputText pt:placeholder="Digite a data"></h:inputText>
+			<br/>
+			<br/>
 			Sexo:
-			<br>
-			</br>
-			masculino
-			<br>
-			</br>
-			feminino
-			<br>
-			</br>
-			<br>
-			</br>
-			RG:<h:inputText 
-				pt:placeholder="Digite o RG"
-				>
-			</h:inputText>
-			<br>
-			</br>
-			<br>
-			</br>
-			Endereço:<h:inputText 
-				pt:placeholder="Digite o endereço"
-				>
-			</h:inputText>
-			<br>
-			</br>
-			<br>
-			</br>
-			Agencia:<h:inputText 
-				pt:placeholder="Digite o numero da agência"
-				>
-			</h:inputText>
-			<br>
-			</br>
-			<br>
-			</br>
+			<h:selectOneRadio value="Sexo">
+			<f:selectItem itemValue="Masc" itemLabel="Masculino"/>
+			<f:selectItem itemValue="Fem" itemLabel="Feminino"/>
+			</h:selectOneRadio>
+			<br/>
+			RG:<h:inputText pt:placeholder="Digite o RG"></h:inputText>
+			<br/>
+			<br/>
+			Endereço:<h:inputText pt:placeholder="Digite o endereço"></h:inputText>
+			<br/>
+			<br/>
+			Agencia:<h:selectOneMenu>
+			<f:selectItem itemValue="Agen" itemLabel="9412"></f:selectItem>
+			</h:selectOneMenu>
+			<br/>
+			<br/>
 			Pessoa:
+			<h:selectOneRadio value="Pessoa">
+			<f:selectItem itemValue="Jur" itemLabel="Juridica"/>
+			<f:selectItem itemValue="Fis" itemLabel="Fisica"/>
+			</h:selectOneRadio>
+			<br/>
 			<br>
 			</br>
-			Juridica
 			<br>
 			</br>
-			Fisica
-			<br>
-			</br>
-			<br>
-			</br>
-			<h:commandButton value="Gravar" 
-				action="#{mCategoriaBean.gravarCategoria(mCategoriaBean.categoria)}"></h:commandButton>
+			<h:commandButton value="Gravar" action="#{mCategoriaBean.gravarCategoria(mCategoriaBean.categoria)}"></h:commandButton>
 </h:form>
 </h:body>
-
-
 </html>
