--- a/TrabalhoBanco/WebContent/CadastroCliente.xhtml
+++ b/TrabalhoBanco/WebContent/CadastroCliente.xhtml
@@ -3,22 +3,65 @@
 <html xmlns="http://www.w3.org/1999/xhtml"
 	  xmlns:h="http://java.sun.com/jsf/html"
 	  xmlns:pt="http://xmlns.jcp.org/jsf/passthrough"
-	  xmlns:f = "http://java.sun.com/jsf/core">
+	  xmlns:f= "http://java.sun.com/jsf/core"
+	  xmlns:b= "http://bootsfaces.net/ui">
 	<h:head>
 		<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
+		<link rel="stylesheet" type="text/css" href="bootstrap.css"/>
+		<script type="text/javascript" src="jquery-3.1.1.min.js"></script>
+		<script type="text/javascript" src="Scripts.js"></script>
 <title>Cadastro Cliente</title>
 </h:head>
-	
+<nav class="navbar navbar-default">
+  <div class="container-fluid">
+    <div class="navbar-header">
+      <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
+        <span class="sr-only">Toggle navigation</span>
+        <span class="icon-bar"></span>
+      </button>
+      <a class="navbar-brand" href="Index.xhtml">EvilMoney</a>
+    </div>
+   
+    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+      <ul class="nav navbar-nav">
+        <li><a href="#">Informações</a></li>
+        <li><a href="#">Cadastro</a></li>
+        <li class="dropdown">
+          <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Ajuda <span class="caret"></span></a>
+          <ul class="dropdown-menu" role="menu">
+            <li><a href="#">Contato</a></li>
+            <li><a href="#">SAC</a></li>
+            <li><a href="#">Ouvidoria</a></li>
+            <li class="divider"></li>
+            <li><a href="#">TESTE</a></li>
+            <li class="divider"></li>
+            <li><a href="#">TESTE 2</a></li>
+          </ul>
+        </li>
+      </ul>
+      <form class="navbar-form navbar-right" role="search">
+        <div class="form-group">
+          <input type="text" class="form-control" placeholder="Buscar"/>
+        </div>
+        <button type="submit" class="btn btn-default">Buscar</button>
+      </form>
+      <ul class="nav navbar-nav navbar-right">
+        <li><a href="Login.xhtml">Login</a></li>
+      </ul>
+    </div>
+  </div>
+</nav>
 	<h:body>
 		<h:form acceptcharset="ISO-8859-1">
+		<fieldset>
 			<h1>Cadastrar Usúario</h1>
-			• Nome: <h:inputText pt:placeholder="Digite o nome"></h:inputText>
+			• Nome: <h:inputText id="Nome" pt:placeholder="Digite o nome"></h:inputText>
 			<br/>
 			<br/>
-			• Email: <h:inputText pt:placeholder="Digite o e-mail"></h:inputText>
+			• Email: <h:inputText id="Email" pt:placeholder="Digite o e-mail"></h:inputText>
 			<br/>
 			<br/>
-			• Senha:<h:inputText pt:placeholder="Digite a senha"></h:inputText>
+			• Senha:<h:inputText id="Senha" pt:placeholder="Digite a senha"></h:inputText>
 			<br/>
 			<br/>
 			• Telefone:<h:inputText pt:placeholder="Digite o telefone"></h:inputText>
@@ -33,12 +76,12 @@
 			<f:selectItem itemValue="Fem" itemLabel="Feminino"/>
 			</h:selectOneRadio>
 			<br/>
-			• RG:<h:inputText pt:placeholder="Digite o RG"></h:inputText>
+			• RG:<h:inputText required="true" id="RG" pt:placeholder="RG"><f:validateLength minimun="15" maximum="20"/></h:inputText>
 			<br/>
 			<br/>
 			• Endereço:
 			<br/>
-			→ <h:inputText pt:placeholder="Rua"></h:inputText>
+			→ <h:inputText id="Rua" pt:placeholder="Rua"><f:validateLength minimun="10" maximum="100"/></h:inputText>
 			<br/>
 			→ <h:inputText pt:placeholder="Número"></h:inputText>
 			<br/>
@@ -61,7 +104,8 @@
 			<f:selectItem itemValue="Jur" itemLabel="Juridica"/>
 			<f:selectItem itemValue="Fis" itemLabel="Fisica"/>
 			</h:selectOneRadio>
-			<h:commandButton value="Cadastrar" action="#{mCategoriaBean.gravarCategoria(mCategoriaBean.categoria)}"></h:commandButton>
-</h:form>
+			<h:commandButton value="Cadastrar" action="#"></h:commandButton>
+			</fieldset>
+	</h:form>
 </h:body>
 </html>
