--- a/TrabalhoBanco/WebContent/CadastroCliente.xhtml
+++ b/TrabalhoBanco/WebContent/CadastroCliente.xhtml
@@ -35,7 +35,7 @@
             <li class="divider"></li>
             <li><a href="#">TESTE</a></li>
             <li class="divider"></li>
-            <li><a href="#">TESTE 23132</a></li>
+            <li><a href="#">TESTE 5232131213123123123</a></li>
           </ul>
         </li>
       </ul>
