--- a/TrabalhoBanco/WebContent/Ouvidoria.xhtml
+++ b/TrabalhoBanco/WebContent/Ouvidoria.xhtml
@@ -12,7 +12,7 @@
 		<script type="text/javascript" src="jquery-3.1.1.min.js"></script>
 		<script type="text/javascript" src="Script.js"></script>
 		<title>Banco EvilMoney</title>
-	</h:head>
+</h:head>
 <body>
 <nav class="navbar navbar-default">
   <div class="container-fluid">
@@ -55,20 +55,16 @@
 </nav>
 <h:form acceptcharset="ISO-8859-1">
 		<fieldset>
-			<h1>Informações</h1>
-			• E-mail:
-			<p:inputText id="email" pt:placeholder="Digite o e-mail"></p:inputText>
-			<br /> <br />
+			<h1>Ouvidoria</h1>
+			<H2><p>Se a sua reclamação foi tratada em nossos canais de atendimento, mas a resposta não atendeu sua expectativa, a Ouvidoria Itaú pode reavaliar seu pedido.
+Se preferir ligue para 0000 0000000, de segunda a sexta (dias úteis) das 9h às 18h</p></H2>
+
 			
-			• Descrição:
-			<p:inputTextarea id="Descricao" pt:placeholder="Esqueva sua descrição"></p:inputTextarea>
-			<br /> <br />
-			• Telefone:
-			<p:inputText id="telefone" pt:placeholder="Digite o telefone"></p:inputText>
-			<br /> <br />
-			<p:commandButton value="Enviar" action="#"></p:commandButton>
 			</fieldset>
 			</h:form>
-			
+
+
+
+
 </body>
 </html>
