--- a/TrabalhoBanco/WebContent/SAC.xhtml
+++ b/TrabalhoBanco/WebContent/SAC.xhtml
@@ -32,7 +32,7 @@
           <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Ajuda <span class="caret"></span></a>
           <ul class="dropdown-menu" role="menu">
             <li><a href="Contato.xhtml">Contato</a></li>
-            <li><a href="SAC.xhtml">SAC</a></li>
+            <li><a href="#">SAC</a></li>
             <li><a href="Ouvidoria.xhtml">Ouvidoria</a></li>
             <li class="divider"></li>
             <li><a href="#">TESTE</a></li>
@@ -54,21 +54,21 @@
   </div>
 </nav>
 <h:form acceptcharset="ISO-8859-1">
-		<fieldset>
-			<h1>Informações</h1>
-			• E-mail:
-			<p:inputText id="email" pt:placeholder="Digite o e-mail"></p:inputText>
-			<br /> <br />
-			
-			• Descrição:
-			<p:inputTextarea id="Descricao" pt:placeholder="Esqueva sua descrição"></p:inputTextarea>
-			<br /> <br />
-			• Telefone:
-			<p:inputText id="telefone" pt:placeholder="Digite o telefone"></p:inputText>
-			<br /> <br />
-			<p:commandButton value="Enviar" action="#"></p:commandButton>
-			</fieldset>
-			</h:form>
-			
+		
+			<h1>SAC</h1>
+<H2>
+Serviço de Atendimento ao Consumidor é um canal telefônico gratuito para solucionar os problemas na relação de consumo, por meio de recebimento de reclamações, fornecimento de informações públicas e gerais e pedidos de cancelamento de produtos e serviços.
+
+</H2>
+
+<p:panel id="telefone" header="Telefone">
+                <h:outputText value="0000 0000000" />
+            </p:panel>
+            </p:dashboard>
+          
+</h:form>
+
+
 </body>
+
 </html>
