--- a/TrabalhoBanco/WebContent/CadastroCliente.xhtml
+++ b/TrabalhoBanco/WebContent/CadastroCliente.xhtml
@@ -35,7 +35,7 @@
 				</a>
 					<ul class="dropdown-menu" role="menu">
 						<li><a href="Contato.xhtml">Contato</a></li>
-						<li><a href="#">SAC</a></li>
+						<li><a href="SAC.xhtml">SAC</a></li>
 						<li><a href="Ouvidoria.xhtml">Ouvidoria</a></li>
 						<li class="divider"></li>
 						<li><a href="#">TESTE</a></li>
