--- a/TrabalhoBanco/WebContent/Ouvidoria.xhtml
+++ b/TrabalhoBanco/WebContent/Ouvidoria.xhtml
@@ -32,7 +32,7 @@
           <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Ajuda <span class="caret"></span></a>
           <ul class="dropdown-menu" role="menu">
             <li><a href="Contato.xhtml">Contato</a></li>
-            <li><a href="#">SAC</a></li>
+            <li><a href="SAC.xhtml">SAC</a></li>
             <li><a href="Ouvidoria.xhtml">Ouvidoria</a></li>
             <li class="divider"></li>
             <li><a href="#">TESTE</a></li>
