--- a/TrabalhoBanco/WebContent/SAC.xhtml
+++ b/TrabalhoBanco/WebContent/SAC.xhtml
@@ -54,21 +54,14 @@
   </div>
 </nav>
 <h:form acceptcharset="ISO-8859-1">
-		
-			<h1>SAC</h1>
-<H2>
-Serviço de Atendimento ao Consumidor é um canal telefônico gratuito para solucionar os problemas na relação de consumo, por meio de recebimento de reclamações, fornecimento de informações públicas e gerais e pedidos de cancelamento de produtos e serviços.
-
-</H2>
-
+<h1>SAC</h1>
+<h2>
+Serviço de Atendimento ao Consumidor é um canal telefônico gratuito para solucionar os problemas na relação de consumo, por meio de recebimento de 
+reclamações, fornecimento de informações públicas e gerais e pedidos de cancelamento de produtos e serviços.</h2>
 <p:panel id="telefone" header="Telefone">
-                <h:outputText value="0000 0000000" />
-            </p:panel>
-            </p:dashboard>
-          
-</h:form>
-
-
+            <h:outputText value="0000 0000000" />
+            </p:panel>    
+            </h:form>
 </body>
 
 </html>
