--- a/TrabalhoBanco/WebContent/SAC.xhtml
+++ b/TrabalhoBanco/WebContent/SAC.xhtml
@@ -57,7 +57,7 @@
 <h1>SAC</h1>
 <h2>
 Serviço de Atendimento ao Consumidor é um canal telefônico gratuito para solucionar os problemas na relação de consumo, por meio de recebimento de 
-reclamações, fornecimento de informações públicas e gerais e pedidos de cancelamento de produtos e serviços.</h2>
+reclamações, fornecimento de informações públicas e gerais e pedidos de cancelamento de produtos e serviçooos.</h2>
 <p:panel id="telefone" header="Telefone">
             <h:outputText value="0000 0000000" />
             </p:panel>    
