--- a/TrabalhoBanco/WebContent/SAC.xhtml
+++ b/TrabalhoBanco/WebContent/SAC.xhtml
@@ -53,6 +53,7 @@
     </div>
   </div>
 </nav>
+<div style="height:500px">
 <h:form acceptcharset="ISO-8859-1">
 <h1>SAC</h1>
 <h2>
@@ -62,6 +63,7 @@ reclamações, fornecimento de informações públicas e gerais e pedidos de can
             <h:outputText value="0000 0000000" />
             </p:panel>    
             </h:form>
+            </div>
 </body>
 
 </html>
