--- a/TrabalhoBanco/WebContent/CadastroCliente.xhtml
+++ b/TrabalhoBanco/WebContent/CadastroCliente.xhtml
@@ -72,7 +72,7 @@
 			<br/> 
 			<br/> 
 			<h:outputText value="• Telefone: "/>
-			<p:inputText id="telefone" pt:placeholder="Digite o telefone" value="#{mCadastroBean.cadastro.telefone}"></p:inputText>
+			<p:inputText id="telefone" required="true"  pt:placeholder="Digite o telefone" value="#{mCadastroBean.cadastro.telefone}"></p:inputText>
 			<br/> 
 			<br/>
 			<h:outputText value="• Data:  FAZENDO AINDA"/>
