--- a/TrabalhoBanco/WebContent/CadastroCliente.xhtml
+++ b/TrabalhoBanco/WebContent/CadastroCliente.xhtml
@@ -72,7 +72,7 @@
 			<br/> 
 			<br/> 
 			<h:outputText value="• Telefone: "/>
-			<p:inputText id="telefone" required="true"  pt:placeholder="Digite o telefone" value="#{mCadastroBean.cadastro.telefone}"></p:inputText>
+			<p:inputText id="telefone" required="true" pt:placeholder="Digite o telefone" value="#{mCadastroBean.cadastro.telefone}"></p:inputText>
 			<br/> 
 			<br/>
 			<h:outputText value="• Data:  FAZENDO AINDA"/>
@@ -103,7 +103,7 @@
 			<br/> 
 			<br/> 
    			<p:outputLabel for="agencia" value="• Agência: " />
-			<h:selectOneMenu  id="agencia">
+			<h:selectOneMenu  itemValue="Agencia">
 				<f:selectItem itemValue="0" itemLabel="9412"></f:selectItem>
 				<f:selectItem itemValue="1" itemLabel="5217"></f:selectItem>
 			</h:selectOneMenu>
