--- a/TrabalhoBanco/WebContent/CadastroCliente.xhtml
+++ b/TrabalhoBanco/WebContent/CadastroCliente.xhtml
@@ -92,9 +92,7 @@
 			<br/> 
 			<h:outputText value="• Endereço: "/>
 			<br/> 
-			→<p:inputText id="Rua" pt:placeholder="Rua">
-				<f:validateLength minimun="10" maximum="100" />
-			</p:inputText>
+			→<p:inputText id="Rua" pt:placeholder="Rua"><f:validateLength minimun="10" maximum="100" /></p:inputText>
 			<br/> →<p:inputText  pt:placeholder="Número"></p:inputText>
 			<br/> →<p:inputText  pt:placeholder="Bairro"></p:inputText>
 			<br/> →<p:inputText  pt:placeholder="Cidade"></p:inputText>
