--- a/TrabalhoBanco/WebContent/Agencia.xhtml
+++ b/TrabalhoBanco/WebContent/Agencia.xhtml
@@ -56,5 +56,16 @@
 		</div>
 	</div>
 </nav>
+<h:form acceptcharset="ISO-8859-1">
+			<h:outputText value="• Agência: "/>
+			<p:inputText id="agencia" required="true" pt:placeholder="Digite o nome da agência" value="#{mCadastroBean.cadastroAgencia.agencia}"></p:inputText>
+			<br/> 
+			<br/> 
+			<h:outputText value="• Conta: "/>
+			<p:inputText id="conta" required="true" pt:placeholder="Digite a conta" value="#{mCadastroBean.cadastroAgencia.conta}"></p:inputText>
+			<br/>
+			<br/> 
+			<p:commandButton value="Gravar" action="#{mCadastroBean.gravarAgencia(mCadastroBean.agencia)}"></p:commandButton>
+</h:form>
 </body>
 </html>
