--- a/TrabalhoBanco/WebContent/Contato.xhtml
+++ b/TrabalhoBanco/WebContent/Contato.xhtml
@@ -46,7 +46,7 @@
           <input type="text" class="form-control" placeholder="Buscar"/>
         </div>
         <button type="submit" class="btn btn-default">Buscar</button>
-      </form>
+              </form>
       <ul class="nav navbar-nav navbar-right">
         <li><a href="Login.xhtml">Login</a></li>
       </ul>
@@ -55,13 +55,13 @@
 </nav>
 <h:form acceptcharset="ISO-8859-1">
 		<fieldset>
-			<h1>Informações</h1>
+			<h1>Contato</h1>
 			• E-mail:
 			<p:inputText id="email" pt:placeholder="Digite o e-mail"></p:inputText>
 			<br /> <br />
 			
 			• Descrição:
-			<p:inputTextarea id="Descricao" pt:placeholder="Esqueva sua descrição"></p:inputTextarea>
+			<p:inputTextarea id="descricao" pt:placeholder="Esqueva sua descrição"></p:inputTextarea>
 			<br /> <br />
 			• Telefone:
 			<p:inputText id="telefone" pt:placeholder="Digite o telefone"></p:inputText>
